[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spike3"
version = "0.1.0"
description = "Python library for communicating with LEGO SPIKE 3 hubs over USB and BLE"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "spike3 contributors"}
]
keywords = ["lego", "spike", "robotics", "education", "hub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
ble = ["bleak>=0.21"]

[tool.setuptools.packages.find]
include = ["spike3*"]
